2007-01-29  Stan Cox  <scox@redhat.com>

	* BaseTypes.java (getTypeSize): New.

2007-01-22  Mike Cvet  <mcvet@redhat.com>

	* Dwfl.java (getLineAddresses): Changed return type to LinkedList.

2007-01-18  Mark Wielaard  <mark@klomp.org>

	* DwflLine.java (toString): New method that gives a debug String
	representation.

2007-01-12  Mike Cvet  <mcvet@redhat.com>

	* Dwfl.java (isLineExecutable): Added.

2007-01-11  Stan Cox  <scox@redhat.com>

	* DwarfDie.java (getScopeVarNames): New.
	(addScopeVarName): New.
	* cni/DwarfDie.java (get_scopevar_names): New.

2006-12-18  Stan Cox  <scox@redhat.com>

	* DwarfDie.java (isFormalParameter): New.
	(isArtificial): New.
	(isExternal): New.
	(toString): New.
	(getDecl): New.
	* cni/DwarfDie.cxx (is_formal_parameter): New.
	(is_artificial): New.
	(is_external): New.
	(get_decl): New.

2006-12-14  Andrew Cagney  <cagney@redhat.com>

	* Dwfl.java: Delete import of java.util.Collections.
	* tests/TestDwfl.java: Delete redundant import of
	frysk.junit.TestCase.

2006-12-14  Adam Jocksch  <ajocksch@redhat.com>

	* Dwfl.java (getLineAddresses): Fixed small bug in initializing list.

	* Dwfl.java (getLineAddresses): Now returns a list rather than a Vector
	(bug #3729).
	* TestDwfl.java (testGetAddresses): Refactored to reflect above change.

2006-12-14  Andrew Cagney  <cagney@redhat.com>

	* tests/TestDwfl.java: Use frysk .junit .Paths .getRunnerBasename.

2006-12-13  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* cni/Dwfl.cxx (dwfl_begin): Fixed `debuginfo' files search path typo.

2006-12-06  Andrew Cagney  <cagney@redhat.com>

	* NoDebugInfoException.java: Add copyright.
	* DwarfCommand.java: Ditto.

2006-11-24  Stan Cox  <scox@redhat.com>

	* DwarfDie.java (scopes): New.
	(getScopeVar): Set it.
	(getFrameBase): Use it.
	(getFormData): Use it.	
	(getScopeIndex): New.
	* cni/DwarfDie.cxx (get_scope_var): Return scope index.

2006=11=09  Stan Cox  <scox@redhat.com>

	* DwarfDie.java (isClassType): New.