@@ -1,3 +1,8 @@
+2007-01-31  Nurdin Premji  <npremji@redhat.com>
+
+	* DwflModule.java (getAddressName): Added.
+	* cni/DwflModule.cxx (getAddressName): New.
+
 2007-01-29  Stan Cox  <scox@redhat.com>
 
 	* BaseTypes.java (getTypeSize): New.
